# MasterThesis_Elastic_Net_and_more

./: .gitignore  README.md
All_notebooks_and_scripts/: utils.py
All_notebooks_and_scripts/0_Data_preparation/1_Omics_data/Kinase_scores_via_wp3_sample_pipeline-master/: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  MakefileShared  README.md  config_melanoma.json  config_melanoma_minimal_test.json  config_patients.json  config_patients2.json  config_patients_glioma.json  config_patients_glioma_minimal_test.json  config_patients_minimal_test.json  config_patients_with_decryptm.json  data_stats.py  plot_config.toml  pyproject.toml  report_README.json
All_notebooks_and_scripts/0_Data_preparation/1_Omics_data/Kinase_scores_via_wp3_sample_pipeline-master/.idea (copy)/: workspace.xml
All_notebooks_and_scripts/0_Data_preparation/1_Omics_data/Kinase_scores_via_wp3_sample_pipeline-master/notebooks/: Comrehensive.ipynb  DecryptM_TUPAC_scores.ipynb  Evidence_plots.ipynb  FH_Chordoma_EGFR.ipynb  FH_Random_Scripting.ipynb  FH_kinase_score_analysis.ipynb  FH_ksea_and_simple_scoring.ipynb  FH_minimal_set_analysis.ipynb  Filter_PDX_evidence.ipynb  ROC_curve_analysis.py  Replicate_CVs.ipynb  Sample_plotting.ipynb  TUPAC_score_cross_correlation.ipynb  TUPAC_score_statistics.ipynb  bioamarker_FFPE_hist.ipynb  chordoma_signature_litreature.py  final_list.csv  massive_upload _rawFiles.ipynb  nature_paper_signatures.py  protocol_effect_remover.py  remove_protocol_effect.ipynb  summed_z_score_chordoma_manual_list.py
All_notebooks_and_scripts/1_Elastic_nets/: ReadMe.txt
(+272 files in other folders)
